Enable BubbleFrameView subclasses to force the client view to overlap into the title.

Bug: 781751
Change-Id: Ifbeed606bae4ac1e4f91e720ec75765dc49f4566