chrome/browser/ui/views/apps/app_info_dialog/app_info_dialog_container.cc
@@ -203,6 +203,9 @@ class FullSizeBubbleFrameView : public views::BubbleFrameView {
     return views::BubbleFrameView::DoesIntersectRect(target, rect);
   }
 
+  // Overridden from views::BubbleFrameView:
+  bool ExtendClientIntoTitle() const override { return true; }
+
   // Overridden from views::View:
   gfx::Insets GetInsets() const override { return gfx::Insets(); }
 
